# translate-workflow

./: .gitignore  README.md  document_loader.py  gui.py  inspect_chunks.py  pdf_recognizer.py  pyproject.toml  requirements.txt  translate_lmstudio.py
.serena/: project.yml
.trae/documents/: PDF 识别（OCR_VLM）预处理集成计划.md  修复 EXE 主题切换与对齐，并打包交付.md  修复启动提示、DPI说明、EXE主题切换并完成重打包交付.md  修复默认_切换主题、消除启动提示，重打包并推送到 GitHub.md  修复默认主题与PDF选项对齐，并打包交付可读取配置的EXE.md  扩展文档格式翻译支持（Markdown_PDF_Word）.md  消除启动提示、解释 DPI、修复 EXE 主题切换并重新打包.md  清理打包中间文件、创建新的配置并更新 README 后推送.md
