[project]
name = "lm-studio-translator"
version = "1.1.0"
description = "A translation tool based on LM Studio with modern GUI interface featuring theme customization"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.55.0",
    "ttkbootstrap>=1.10.1",
    "pdfminer.six>=20221105",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.9",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[project.scripts]
lm-translate = "translate_lmstudio:main"
lm-translate-gui = "gui:main"
lm-inspect = "inspect_chunks:main"